[package]
name = "flic"
version = "0.1.0"
authors = ["Brandon Sprague <brandon00sprague@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.3.1"
num = "0.2.1"
num-derive = "0.3.0"
num-traits = "0.2"
